feature/AppOnboarding: changes related to creation of create Application JSON and error handling

--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -145,11 +145,11 @@
 .help-block{
     color: red;
 }
-input.ng-invalid.ng-touched{
+input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
     border: 1px solid red;
 }
 .formarray_btn{
-	font-size: x-large;
+	font-size: large;
 	color: #6c757d;
 	cursor: pointer;
 }
@@ -179,6 +179,13 @@ input.ng-invalid.ng-touched{
 	}
 	.mr-6{
 		margin-right: 4.4rem !important;
+	}
+	.input_len{
+		width: 94%;
+	}
+	.btn-link-black.btn-link {
+		text-decoration: underline !important;
+		color: #000 !important;
 	}
 	
 }
