--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -42,13 +42,6 @@
               <span>Service name</span>
               <strong>{{serviceArr.serviceName}}</strong>
             </li>
-           
-              <li class="ti-item">
-                <i class="{{serviceArr.environment !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
-                <span>Environment</span>
-                <strong>{{serviceArr.environment}}</strong>
-              </li>
-            
             <!-- <li class="ti-item" *ngFor = "let pipelineData of serviceArr.pipeline[0].pipelineParameter">
                 <i class="{{pipelineData.value !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
                 <span>{{pipelineData.label}}:</span>
@@ -56,6 +49,19 @@
             </li> -->
             <br>
             <br>
+          </ul>
+          <!-- /.tree-inset -->
+          <ul class="tree-inset list-unstyled {{environmentForm.value.environments[0].key !== '' ? 'tree-active' : ''}}"
+            *ngIf="environmentForm.value.environments.length !== 0 ? true : false ">
+            <li class="ti-title">
+              <i class="{{environmentForm.value.environments[0].key !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
+              <span>Environment Details</span>
+            </li>
+            <li class="ti-item" *ngFor="let env of environmentForm.value.environments; let index = i">
+              <i class="{{env.value !== '' ? 'fas fa-check-circle' : 'far fa-dot-circle'}}"></i>
+              <span>{{env.key}} :</span>
+              <strong *ngIf="env.value !== ''? true:false">{{env.value}}</strong>
+            </li>
           </ul>
           <!-- /.tree-inset -->
           <ul class="tree-inset list-unstyled {{groupPermissionForm.value.userGroups[0].userGroup !== '' ? 'tree-active' : ''}}"
@@ -71,7 +77,7 @@
             </li>
           </ul>
           <!-- /.tree-inset -->
-          <ul class="tree-inset tree-finished list-unstyled {{groupPermissionForm.valid && createApplicationForm.valid && servicesForm.valid ? 'tree-active' : ''}}">
+          <ul class="tree-inset tree-finished list-unstyled {{groupPermissionForm.valid && createApplicationForm.valid && servicesForm.valid && environmentForm.valid ? 'tree-active' : ''}}">
             <li class="ti-title">
               <i class="{{groupPermissionForm.valid && createApplicationForm.valid && servicesForm.valid ? 'fas fa-circle' : 'far fa-circle'}}"></i>
               <span>Finish Application</span>
@@ -147,15 +153,6 @@
                             class="help-block">Service name is required</span>
                           <!-- /.d-flex -->
                         </div>
-                        <div class="form-group pl-4 text-muted">
-                          <label>Environment</label>
-                          <div class="d-flex mb-3 mr-4 align-items-center">
-                            <select class="form-control input_len" formControlName="environment">
-                              <option *ngFor="let environmentData of environmentExists" value="{{environmentData.value}}">{{environmentData.value}}</option>
-                            </select>
-                            </div>
-                          <!-- /.d-flex -->
-                        </div>
                         <div class="col-12 " formArrayName="pipeline">
                           <div class="row"
                             *ngFor="let pipelineArr of serviceArr.get('pipeline')['controls'];let j=index">
@@ -166,7 +163,7 @@
                                   <select class="form-control" formControlName="pipelineType" (change)="onPipelineSelect(i,j)">
                                     <option *ngFor="let pipelineData of pipelineExists" value="{{pipelineData.value}}">{{pipelineData.value}}</option>
                                   </select>
-                                  <a class="text-muted ml-3 formarray_btn"><i class="fas fa-plus"></i></a>
+                                  <!-- <a class="text-muted ml-3 formarray_btn"><i class="fas fa-plus"></i></a> -->
                                 </div>
                                 <span *ngIf="!pipelineArr.get('pipelineType').valid && pipelineArr.get('pipelineType').touched"
                                 class="help-block">Pipeline is required</span>
@@ -204,6 +201,74 @@
             <!-- /.col-6 -->
 
             <!-- ###################### Services Section Ends #####################################-->
+
+             <!-- ###################### Environment Section Starts ###########################-->
+
+             <div class="col-10">
+              <hr class="ml-0 mt-3 mb-3" />
+            </div>
+            <!-- /.col-8 -->
+            <div class="col-lg-8 col-12 col-xl-6">
+              <div class="form-group group_permission">
+                <label>Environments<a class="btn-link" (click)="addEnvironment()">(Add New Environment)</a></label>
+                <div class="row" *ngIf="environmentForm.value.environments.length !== 0 ? true : false ">
+                  <div class="col-12">
+                    <form [formGroup]="environmentForm">
+                      <div class="col-12">
+                        <hr class="ml-0 mt-3 mb-3" />
+                      </div>
+                      <div class="col-12" formArrayName="environments">
+                        <div class="row">
+                          <div class="col-12" class="table table-outline permission_section_heading">
+                            <div class="row">
+                              <div class="col-4"><strong>Key</strong></div>
+                              <div class="col-6"><strong>Value</strong></div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-12">
+                            <hr class="ml-0 mt-3 mb-3" />
+                          </div>
+                        </div>
+                        <div class="row"
+                          *ngFor="let optionsArr of environmentForm.get('environments')['controls'];let i=index">
+                          <div class="col-md-12 permission_Section_content" [formGroupName]="i">
+                            <div class="row">
+                              <div class="col-md-4">
+                                <input type="text" class="form-control" formControlName="key">
+                                <span *ngIf="!environmentForm.get('environments')['controls'][i].get('key').valid && environmentForm.get('environments')['controls'][i].get('key').touched"
+                                class="help-block">Key is required</span>
+                              </div>
+                              <div class="col-md-5">
+                                <input type="text" class="form-control" formControlName="value">
+                                <span *ngIf="!environmentForm.get('environments')['controls'][i].get('value').valid && environmentForm.get('environments')['controls'][i].get('value').touched"
+                                class="help-block">Value is required</span>
+                              </div>
+                              <div class="col-md-3">
+                                <button mat-icon-button class="formarray_btn" (click)="removeEnvironment(i)">
+                                  <i class="fas fa-trash-alt"></i>
+                                </button>
+                                <button mat-icon-button
+                                  *ngIf="environmentForm.get('environments')['controls'].length === i+1 ? true : false"
+                                  class="formarray_btn" (click)="addEnvironment()">
+                                  <i class="fas fa-plus" aria-hidden="true"></i>
+                                </button>
+                              </div>
+                            </div>
+                            <br>
+                          </div>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- /.form-group -->
+            </div>
+            <!-- /.col-6 -->
+
+            <!-- ###################### Environment Section Ends ###########################-->
 
             <!-- ###################### Group Permission Section Starts ###########################-->
 
@@ -270,46 +335,6 @@
                     </form>
                   </div>
                 </div>
-                <!-- <table class="table table-outline">
-                  <thead>
-                    <tr>
-                      <th>Group</th>
-                      <th colspan="2">Permissions</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>Perm Group</td>
-                      <td>
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="per_rw1">
-                          <label class="custom-control-label" for="per_rw1">Read & Write</label>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="per_ro1">
-                          <label class="custom-control-label" for="per_ro1">Read Only</label>
-                        </div>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>Perm Group</td>
-                      <td>
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="per_rw2">
-                          <label class="custom-control-label" for="per_rw2">Read & Write</label>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="per_ro2">
-                          <label class="custom-control-label" for="per_ro2">Read Only</label>
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table> -->
               </div>
               <!-- /.form-group -->
             </div>
