--- a/src/app/release/release.component.html
+++ b/src/app/release/release.component.html
@@ -2,19 +2,29 @@
       <div class="rightBox position-sticky">
         <div class="rightBox_header d-flex align-items-center">
           <h3>{{application}}</h3>
-          <div class="btns_icon d-flex ml-auto">
+          <!-- <div class="btns_icon d-flex ml-auto">
             <button class="btn p-0"><img src="../../../assets/plus_icon.png" alt="plus" /></button>
             <button class="btn p-0 ml-2"><img src="../../../assets/edit_icon.png" alt="edit" /></button>
-          </div>
+          </div> -->
           <!-- /.btns_icon -->
         </div>
         <!-- /.rightBox_header -->
         <div class="rightBox_body">
           <div *ngIf="showRelease">
-          <div class="form-group form-inline">
-                <label for="exampleInputEmail1">Release Name
-                  :&nbsp;&nbsp;&nbsp;</label> <input type="text" class="form-control"
+              <div class="form-group form-inline">
+                <label for="exampleInputReleaseName">Release Name
+                  :&nbsp;&nbsp;&nbsp;</label> <input type="text" [(ngModel)]="promoteData.releaseName" class="form-control"
                   id="releaseName">
+              </div>
+              <div class="form-group form-inline">
+                <label for="exampleInputJiraid">Jira Id
+                  :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <input type="text" [(ngModel)]="promoteData.jiraId" class="form-control"
+                  id="jiraId">
+              </div>
+              <div class="form-group form-inline" *ngFor="let environment of newReleaseData.env;let i=index">
+                <label for="exampleInputEnvironment">{{environment.key}}
+                  :&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label> <input type="text" [(ngModel)]="environment.val" class="form-control"
+                  id="environment">
               </div>
               <div class="row">
                 <div class="col-md-12">
@@ -31,12 +41,12 @@
                   <tbody>
                     <tr *ngFor="let newRelease of newReleaseData.services;let i= index">
                       <td>	<div class="custom-control custom-checkbox">
-                          <input type="checkbox" class="custom-control-input" id="{{newRelease.serviceName}}">
+                          <input type="checkbox" [(ngModel)]="newRelease.isChecked" class="custom-control-input" id="{{newRelease.serviceName}}">
                           <label class="custom-control-label" for="{{newRelease.serviceName}}">{{newRelease.serviceName}}</label>
                         </div></td>
                       <td>
-                          <select class="form-control">
-                            <option *ngFor="let containers of newRelease.containerTags" [value]="containers.containerTag">{{containers.containerTag}}</option>
+                          <select class="form-control"  [(ngModel)]="newRelease.latestImageId">
+                            <option *ngFor="let containers of newRelease.images" [value]="newRelease.latestImageId">{{containers.tags}}</option>
                           </select>
                       </td>
                     </tr>
@@ -45,7 +55,7 @@
                 </table>
               <div class="bottom_btns mt-auto bg-white position-sticky text-right">
                   <button class="btn btn-danger" style="color:#fff;" (click)="cancelRelease()">Cancel</button>
-                &nbsp;&nbsp; <button class="btn btn-primary">Promote</button>
+                &nbsp;&nbsp; <button class="btn btn-primary" (click)="promoteRelease()">Promote</button>
                </div>
           </div>
           <div class="table-responsive" *ngIf="!showRelease">
@@ -61,12 +71,17 @@
                 <th>Date</th>
               </tr>
             </thead>
-            <tbody>
-              <tr *ngFor="let release of releaseData;let i = index">
+            <tbody *ngFor="let release of releaseData;let i = index">
+              <tr data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                 <td>{{release.releaseName}}</td>
                 <td>{{release.date | date: 'medium'}}</td>
               </tr>
-
+                  <!-- <tr class="collapse" id="collapseExample" *ngFor="let services of release.services;let i = index">
+                        <td>{{services.serviceName}}</td>
+                        <td>{{services.latestImageId}}</td>
+                  </tr> -->
+                     
+             
             </tbody>
           </table>
           </div>
