Fixed styling issues in Audit page

--- a/src/styles.less
+++ b/src/styles.less
@@ -29,6 +29,17 @@ body{
     background: #999;  
     }
 
+    /* Disable Selection Highlighting */
+::selection {
+  color: none;
+  background: none;
+}
+/* For Mozilla Firefox */
+::-moz-selection {
+  color: none;
+  background: none;
+}
+/* End Selection Highlighting*/
     
 @font-face {
 font-family: 'Avenir';
