style changes related to application and release page

--- a/src/app/application-dashboard/application-dashboard.component.html
+++ b/src/app/application-dashboard/application-dashboard.component.html
@@ -4,7 +4,7 @@
                           <h2>Application Dashboard </h2>
 
                           <div class="page_access ml-auto">
-                            <button class="btn btn-white"><img src="../../../assets/setting_icon.png" alt="icon" /></button>
+                            <!-- <button class="btn btn-white"><img src="../../../assets/setting_icon.png" alt="icon" /></button> -->
                             <button class="btn btn-primary ml-2" (click)="addNewApplication()"  data-backdrop="static" data-keyboard="false"><i class="fa mr-2 fa-plus"></i> Add Application</button>
                           </div>
                           <!-- /.page_access ml-auto -->
