--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -167,7 +167,22 @@
                                 </div>
                                 <span *ngIf="!pipelineArr.get('pipelineType').valid && pipelineArr.get('pipelineType').touched"
                                 class="help-block">Pipeline is required</span>
-                                <!-- /.d-flex -->
+                              </div>
+                              <div class="form-group mb-3 pl-5 text-muted">
+                                <label>Cloud Account</label>
+                                <div class="d-flex  mr-5 align-items-center">
+                                  <input type="text" class="form-control" formControlName="cloudAccount">
+                                </div>
+                                <span *ngIf="!pipelineArr.get('cloudAccount').valid && pipelineArr.get('cloudAccount').touched"
+                                class="help-block">Cloud Account is required</span>
+                              </div>
+                              <div class="form-group mb-3 pl-5 text-muted">
+                                <label>Docker Image Name</label>
+                                <div class="d-flex  mr-5 align-items-center">
+                                  <input type="text" class="form-control" formControlName="dockerImageName">
+                                </div>
+                                <span *ngIf="!pipelineArr.get('dockerImageName').valid && pipelineArr.get('dockerImageName').touched"
+                                class="help-block">Docker Image Name is required</span>
                               </div>
                               <div class="col-12 " formArrayName="pipelineParameter">
                                 <div class="row" *ngFor="let pipelineParameterArr of pipelineArr.get('pipelineParameter')['controls']; let k=index">
@@ -210,7 +225,7 @@
             <!-- /.col-8 -->
             <div class="col-lg-8 col-12 col-xl-6">
               <div class="form-group group_permission">
-                <label>Environments<a class="btn-link" (click)="addEnvironment()">(Add New Environment)</a></label>
+                <label>Environments</label>
                 <div class="row" *ngIf="environmentForm.value.environments.length !== 0 ? true : false ">
                   <div class="col-12">
                     <form [formGroup]="environmentForm">
@@ -245,14 +260,9 @@
                                 <span *ngIf="!environmentForm.get('environments')['controls'][i].get('value').valid && environmentForm.get('environments')['controls'][i].get('value').touched"
                                 class="help-block">Value is required</span>
                               </div>
-                              <div class="col-md-3">
+                              <div class="col-md-1">
                                 <button mat-icon-button class="formarray_btn" (click)="removeEnvironment(i)">
                                   <i class="fas fa-trash-alt"></i>
-                                </button>
-                                <button mat-icon-button
-                                  *ngIf="environmentForm.get('environments')['controls'].length === i+1 ? true : false"
-                                  class="formarray_btn" (click)="addEnvironment()">
-                                  <i class="fas fa-plus" aria-hidden="true"></i>
                                 </button>
                               </div>
                             </div>
@@ -262,6 +272,12 @@
                       </div>
                     </form>
                   </div>
+                </div>
+                <div class="col-12">
+                  <hr class="ml-0 mt-3 mb-3" />
+                </div>
+                <div class="col-6">
+                  <a class="btn btn-link btn-link-black" (click)="addEnvironment()">{{environmentForm.value.environments.length !== 0 ? 'Add another Environment' : 'Add Environment' }}</a>
                 </div>
               </div>
               <!-- /.form-group -->
@@ -278,7 +294,7 @@
             <!-- /.col-8 -->
             <div class="col-lg-8 col-12 col-xl-6">
               <div class="form-group group_permission">
-                <label>Group Permissions <a class="btn-link" (click)="addGroup()">(Add New Group)</a></label>
+                <label>Group Permissions</label>
                 <div class="row" *ngIf="groupPermissionForm.value.userGroups.length !== 0 ? true : false ">
                   <div class="col-12">
                     <form [formGroup]="groupPermissionForm">
@@ -317,14 +333,9 @@
                                 <span *ngIf="!groupPermissionForm.get('userGroups')['controls'][i].get('permission').valid && groupPermissionForm.get('userGroups')['controls'][i].get('permission').touched"
                                 class="help-block">Permission is required</span>
                               </div>
-                              <div class="col-md-3">
+                              <div class="col-md-1">
                                 <button mat-icon-button class="formarray_btn" (click)="removeGroup(i)">
                                   <i class="fas fa-trash-alt"></i>
-                                </button>
-                                <button mat-icon-button
-                                  *ngIf="groupPermissionForm.get('userGroups')['controls'].length === i+1 ? true : false"
-                                  class="formarray_btn" (click)="addGroup()">
-                                  <i class="fas fa-plus" aria-hidden="true"></i>
                                 </button>
                               </div>
                             </div>
@@ -334,6 +345,12 @@
                       </div>
                     </form>
                   </div>
+                </div>
+                <div class="col-12">
+                  <hr class="ml-0 mt-3 mb-3" />
+                </div>
+                <div class="col-6">
+                  <a class="btn btn-link btn-link-black" (click)="addGroup()">{{groupPermissionForm.value.userGroups.length !== 0 ? 'Add another Group' : 'Add Group' }}</a>
                 </div>
               </div>
               <!-- /.form-group -->
