--- a/src/app/application-dashboard/application-dashboard.component.less
+++ b/src/app/application-dashboard/application-dashboard.component.less
@@ -1,11 +1,3 @@
-
-.main_content {
-	padding: 15px 25px 0;
-}
-.page-title {
-	font-size: 19px;
-	margin: 0;
-}
 .page_title {
 	border-bottom: 1px solid #e7ecf2;
 	padding: 10px 0;
@@ -341,3 +333,6 @@
 .showElementHover {
 	cursor: pointer !important;
 }
+.disabled {
+	cursor: not-allowed;
+  }
