--- a/src/styles.less
+++ b/src/styles.less
@@ -76,3 +76,11 @@ url('../src/assets/fonts/Avenir-Book.svg#Avenir-Book') format('svg');
 font-weight: normal;
 font-style: normal;
 }
+
+.main_content {
+	padding: 15px 25px 0;
+}
+.page-title {
+	font-size: 19px;
+	margin: 0;
+}
