Refactoring assets images and common css to style.less

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-12 maindiv {{addclass == true ? 'view_in' : ''}}">
     <div class="sidebar" *ngIf="isAuthenticate">
       <div class="sidebar_header d-flex align-items-center justify-content-between">
-        <div class="logo"><img src="../../../assets/logo.png" alt="logo"></div>
+        <div class="logo"><img src="../../../assets/images/logo.png" alt="logo"></div>
         <div class="menu_toggle" (click)="toggleNavbar()"><i class="fa fa-bars"></i></div>
       </div>
       <!-- /.sidebar_header -->
