--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -12,7 +12,7 @@
     <div class="mtb_right ml-4">
       <div class="dropdown userSetting">
         <button class="btn p-0 dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <span class="userPic"><img src="../assets/user_pic.png" alt="User Pic" /></span>
+          <span class="userPic"><img src="../../assets/images/user_pic.png" alt="User Pic" /></span>
           {{username}}
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
