--- a/src/app/layout/header/header.component.less
+++ b/src/app/layout/header/header.component.less
@@ -30,7 +30,7 @@
   .dropdown-toggle::after{
     border: none;
     vertical-align: 0.155em;
-    content: url(../../../assets/arrow_down.png);
+    content: url(../../../assets/images/arrow_down.png);
   }
   a{
     text-decoration: none;
